Added multiline formatting for 3dText